2005-09-06  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Add a cast.

2005-09-06  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Set the cdparanoia read speed preference on every rip, just to
	make sure.

2005-09-06  Ross Burton  <ross@burtonini.com>

	* help/sound-juicer/C/sound-juicer.xml:
	Fix typo.

2005-09-05  Ross Burton  <ross@burtonini.com>

	* README:
	Updated.

2005-09-05  Ross Burton  <ross@burtonini.com>

	* Makefile.am:
	* doap.rdf.in:
	Generate a DOAP file at dist-time and ship it.

2005-09-05  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.12!

2005-09-04  Roozbeh Pournader  <roozbeh@farsiweb.info>

	* configure.in: Added "fa" (Persian) to ALL_LINGUAS.

2005-08-25  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Bind F1 to Help.

2005-08-23  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.11.92.

2005-08-18  Ross Burton  <ross@burtonini.com>

	* help/sound-juicer/C/sound-juicer.xml:
	Move the namespace declarations to their usage so libxml strips
	them, thus letting distcheck pass.

2005-08-12  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-volume.c: (bacon_volume_scale_new):
	  Fix scrolling over widget (ported from Totem).

2005-08-12  Ross Burton  <ross@burtonini.com>

	* src/sj-play.[ch]:
	New function to reset the interface to Stop mode without actually
	changing the pipeline.

	* src/sj-main.c:
	Call function when the disk is ejected.

	This is required as cdparanoia doesn't tell us when the drive is
	ejected, and stopping the pipeline causes a deadlock. Very sad.
	
2005-08-10  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-volume.c: (bacon_volume_button_new),
	(bacon_volume_scale_value_changed):
	* src/bacon-volume.h:
	* src/sj-main.c: (sj_make_volume_button):
	  Update for varying icon sizes (needed in Rhythmbox); doesn't
	  actually change anything in practice.

2005-08-09  Ross Burton  <ross@burtonini.com>

	* autogen.sh: