@@ -1,3 +1,8 @@
+2005-09-10  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-main.c:
+	Add a --device option for gnome-volume-manager.
+
 2005-09-06  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-play.c:
